--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsdom": "^22.1.0",
+    "sanitize-html": "^2.11.0",
     "scrapingbee": "^1.7.4"
   },
   "description": ""
